# bookman-ai-agent-vmx1sz

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  deploy-prod.yml  deploy-staging.yml  frontend-ci.yml  security-scan.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/logging/elasticsearch/: elasticsearch.yml
infrastructure/logging/fluentd/: fluent.conf
infrastructure/logging/kibana/: kibana.yml
infrastructure/monitoring/grafana/dashboards/: api-gateway.json  infrastructure.json  services.json
infrastructure/monitoring/jaeger/: jaeger.yml
infrastructure/monitoring/loki/: loki.yml
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/monitoring/prometheus/rules/: alerts.yml  recording.yml
infrastructure/monitoring/tempo/: tempo.yml
infrastructure/security/cert-manager/: certificates.yml  cluster-issuer.yml
infrastructure/security/vault/: config.hcl
infrastructure/security/vault/policies/: services.hcl
infrastructure/terraform/aws/: cloudfront.tf  eks.tf  elasticache.tf  iam.tf  kms.tf  main.tf  outputs.tf  rds.tf  route53.tf  s3.tf  variables.tf  vpc.tf
infrastructure/terraform/environments/prod/: main.tf  terraform.tfvars
infrastructure/terraform/environments/staging/: main.tf  terraform.tfvars
infrastructure/terraform/modules/eks/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
src/backend/: .dockerignore  .env.example  README.md  docker-compose.yml  jest.config.ts  nodemon.json  package.json  tsconfig.json  tslint.json
src/backend/api-gateway/: Dockerfile  kong.yml  plugins.yml  routes.yml
src/backend/api-gateway/certificates/: README.md
src/backend/auth-service/: Dockerfile  package.json  tsconfig.json
src/backend/auth-service/src/: index.ts
src/backend/auth-service/tests/: auth.test.ts
src/backend/community-service/: Dockerfile  package.json  tsconfig.json
src/backend/community-service/src/: index.ts
src/backend/community-service/tests/: forum.test.ts
src/backend/db/migrations/: 001_init.sql  002_user_tables.sql  003_portfolio_tables.sql  004_market_tables.sql  005_education_tables.sql  006_security_tables.sql  007_community_tables.sql
src/backend/education-service/: Dockerfile  pyproject.toml  requirements.txt
src/backend/education-service/src/: config.py  main.py
src/backend/education-service/src/models/: course.py  progress.py
src/backend/education-service/src/routes/: courses.py
src/backend/education-service/src/services/: learning_path.py
src/backend/education-service/src/utils/: ai_content.py
src/backend/education-service/tests/: test_courses.py
src/backend/k8s/: api-gateway.yaml  auth-service.yaml  community-service.yaml  configmaps.yaml  education-service.yaml  ingress.yaml  market-analysis.yaml  portfolio-service.yaml  secrets.yaml  security-service.yaml  service-mesh.yaml
src/backend/market-analysis/: Dockerfile  requirements.txt
src/backend/market-analysis/src/: config.py  main.py
src/backend/market-analysis/tests/: test_predictions.py
src/backend/portfolio-service/: Dockerfile  go.mod  go.sum
src/backend/portfolio-service/cmd/: main.go
src/backend/portfolio-service/tests/: portfolio_test.go
src/backend/security-service/: Cargo.toml  Dockerfile
src/backend/security-service/src/: config.rs  main.rs
src/backend/security-service/src/models/: alert.rs
src/backend/security-service/src/services/: fraud_detection.rs  smart_contract_audit.rs
src/backend/security-service/src/utils/: blockchain.rs
src/backend/security-service/tests/: fraud_detection_test.rs
src/backend/shared/proto/: auth.proto  community.proto  education.proto  market.proto  portfolio.proto  security.proto
src/backend/shared/schemas/: course.schema.json  market.schema.json  portfolio.schema.json  user.schema.json
src/web/: .dockerignore  .env.example  .eslintrc.json  .prettierrc  Dockerfile  README.md  index.html  jest.config.ts  nginx.conf  package.json  tsconfig.json  vite.config.ts
src/web/src/: App.tsx  main.tsx  vite-env.d.ts
src/web/src/api/: auth.ts  community.ts  education.ts  market.ts  portfolio.ts  security.ts
src/web/src/config/: api.config.ts  chart.config.ts  theme.config.ts
src/web/src/constants/: api.constants.ts  chart.constants.ts  route.constants.ts
src/web/src/hooks/: useAuth.ts  useChart.ts  useDarkMode.ts  useLocalStorage.ts  useMarketData.ts  usePortfolio.ts  useWebSocket.ts
src/web/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx  MainLayout.tsx
src/web/src/routes/: PrivateRoute.tsx  PublicRoute.tsx  index.tsx
src/web/src/services/: api.service.ts  auth.service.ts  chart.service.ts  storage.service.ts  websocket.service.ts
src/web/src/store/: index.ts
src/web/src/styles/: animations.css  charts.css  components.css  global.css  layout.css  themes.css  typography.css  variables.css
src/web/src/types/: api.types.ts  chart.types.ts  common.types.ts  market.types.ts  portfolio.types.ts  store.types.ts
src/web/src/utils/: api.utils.ts  chart.utils.ts  (+4 more)
(+107 files in other folders)
