[package]
name = "security-service"
version = "0.1.0"
edition = "2021"
authors = ["Bookman AI Team"]
description = "Security service for fraud detection and smart contract auditing"
license = "MIT"
repository = "https://github.com/bookman/security-service"

[dependencies]
# Async Runtime - v1.28
tokio = { version = "1.28", features = ["full", "macros", "rt-multi-thread"] }

# gRPC and Protocol Buffers - v0.9, v0.11
tonic = { version = "0.9", features = ["tls", "transport"] }
prost = "0.11"

# Serialization - v1.0
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum Integration - v2.0
ethers = { version = "2.0", features = ["full"] }

# Logging and Tracing - v0.1, v0.3
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling - v1.0
anyhow = "1.0"

# Machine Learning - v0.1
rust-ml = "0.1"

# Cryptography - v0.10
openssl = { version = "0.10", features = ["vendored"] }

# Metrics - v0.20
metrics = { version = "0.20", features = ["std"] }

# Stream Processing - v0.1
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.9"
prost-build = "0.11"

[features]
default = ["full-security"]
full-security = ["fraud-detection", "smart-contract-audit"]
fraud-detection = []
smart-contract-audit = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "security-service"
path = "src/main.rs"

[package.metadata]
msrv = "1.70.0"  # Minimum Supported Rust Version